# 2d-platformer

./: CMakeLists.txt  README.md  main.cpp
include/entity/: CollidableObject.h  CollidableObjectType.h  PhysicsObject.h  PlayerSpriteState.cpp  PlayerState.cpp
include/entity/objects/: DashCrystal.h  DashCrystalState.h  KillZone.cpp  KillZone.h  OneWayPlatform.cpp  OneWayPlatform.h  SwapBlock.h  TouchSwitch.h  TouchSwitchState.h
include/entity/player/: Ability.h  AbilityDash.h  DashDirection.h  Facing.h  Player.h  PlayerInputHandler.cpp  PlayerInputHandler.h  PlayerSpriteState.h  PlayerState.cpp  PlayerState.h  PlayerStateAir.cpp  PlayerStateAir.h  PlayerStateClimbing.cpp  PlayerStateClimbing.h  PlayerStateGround.cpp  PlayerStateGround.h
include/entity/player/ability/: AbilityDash.h  AbilityJump.h  DashDirection.h
include/entity/player/sprites/: Facing.h  PlayerDash.h  PlayerFall.h  PlayerIdle.h  PlayerRun.h  PlayerSpriteHandler.cpp  PlayerSpriteHandler.h  PlayerSpriteState.h  PlayerTextures.h
include/entity/sprites/: TexturesHolder.h
include/events/: Collision.h  Contact.cpp  Contact.h  Event.h  EventBus.h  EventExecuteTime.h  Listener.h  ListenerPriority.h  PlayerDashEvent.h  PlayerLanded.h  PlayerLeftGround.h  PlayerOnGround.h
include/physics/: Collider.h  ColliderBodies.h  CollisionAxis.h  CollisionResolution.h  CollisionsHandler.h  ContactAxis.h  ContactResolution.h  ContactsHandler.cpp  ContactsHandler.h  GlobalIsland.h  Hitbox.h  Island.cpp  Island.h  SpacialHashMap.cpp  SpacialHashMap.h
include/utility/: EmptyTextures.h  GameRender.h  InputManager.h  Random.h  ScheduledEvent.h  Scheduler.h  SoundEffect.h  SoundLoop.h  SoundManager.h
src/entity/: CollidableObject.cpp  PhysicsObject.cpp
src/entity/objects/: DashCrystal.cpp  KillZone.cpp  OneWayPlatform.cpp  SwapBlock.cpp  TouchSwitch.cpp
src/entity/player/: Ability.cpp  AbilityDash.cpp  AbilityJump.cpp  Player.cpp  PlayerInputHandler.cpp  PlayerSpriteState.cpp  PlayerState.cpp  PlayerStateAir.cpp  PlayerStateClimbing.cpp  PlayerStateGround.cpp
src/entity/player/ability/: Ability.cpp  AbilityDash.cpp  AbilityJump.cpp
src/entity/player/sprites/: PlayerSpriteHandler.cpp
src/events/: Collision.cpp  Contact.cpp  Event.cpp  EventBus.cpp  Listener.cpp  PlayerLeftGround.cpp  PlayerOnGround.cpp
src/physics/: Collider.cpp  ColliderBodies.cpp  CollisionsHandler.cpp  ContactResolution.cpp  ContactsHandler.cpp  GlobalIsland.cpp  Hitbox.cpp  SpacialHashMap.cpp
src/utility/: GameRender.cpp  SoundLoop.cpp  SoundManager.cpp
